# sourcebot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/sourcebot/: __init__.py  __main__.py
src/sourcebot/bus/: __init__.py  channel_adapter.py  event_bus.py  message_models.py  outbound_dispatcher.py  session_manager.py
src/sourcebot/cli/: main.py
src/sourcebot/config/: __init__.py  base.py  config_manager.py  exceptions.py  global_config.py  provider_config.py  workspace_config.py
src/sourcebot/context/: __init__.py  context_builder.py  identity.py  message_builder.py
src/sourcebot/context/skill/: __init__.py  skill.py  skill_context.py  skill_loader.py  skill_metadata.py  (+2 more)
src/sourcebot/conversation/: __init__.py  service.py
src/sourcebot/docker_sandbox/: __init__.py  docker_sandbox.py
src/sourcebot/llm/: __init__.py  llm_client_factory.py
src/sourcebot/logging/: __init__.py  setup.py
src/sourcebot/memory/: __init__.py  file_store.py  llm_consolidator.py  service.py  window_policy.py
src/sourcebot/prompt/: __init__.py  deeomposer_prompt.py  identity_prompt.py  subagent_prompt.py
src/sourcebot/runtime/: __init__.py  init_system.py  tool_executor.py
src/sourcebot/security/: policy.py
src/sourcebot/session/: __init__.py  jsonl_repository.py  repository.py  service.py  session.py
src/sourcebot/storage/: __init__.py  rules_loader.py  skill_storage.py
src/sourcebot/tools/: __init__.py  base.py  registry.py  rule_detail.py  rule_list.py  shell.py  skill_detail.py  skill_list.py
src/sourcebot/utils/: __init__.py  output.py
(+39 files in other folders)
